[package]
name = "gtypes"
version = "0.2.0"
authors = ["Mikhail Zabaluev <mikhail.zabaluev@gmail.com>"]
license = "LGPL-2.1+"

description = "Fundamental type definitions for GLib-based APIs."

repository = "https://github.com/gi-rust/gtypes.git"

[lib]
path = "gtypes.rs"

[dependencies]
libc = "0.2"
